[package]
name = "intro_to_rust"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "basic_types"
path = "src/basic_types.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "async"
path = "src/async.rs"

[[bin]]
name = "str"
path = "src/str.rs"

[[bin]]
name = "box_dyn"
path = "src/box_dyn.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
